# snek

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  environment.yml  setup.cfg
docs/: action-pipeline.rst  advanced.rst  conf.py  dependencies.rst  dev-guide.rst  extensions.rst  faq.rst  features.rst  index.rst  install.rst  migration.rst  project-structure.rst  reasons.rst  updating.rst  usage.rst
docs/examples/: cirrus-extension.rst  gitlab-ci-extension.rst  namespace-extension.rst  no-cli-extension.rst  no-skeleton-extension.rst  no-tox-extension.rst  pre-commit-extension.rst
docs/gfx/: demo.cast
src/snek/: __init__.py  actions.py  api.py  cli.py  exceptions.py  file_system.py  identification.py  info.py  log.py  operations.py  repo.py  structure.py  update.py
src/snek/extensions/: __init__.py  cirrus.py  config.py  github_actions.py  gitlab_ci.py  interactive.py  namespace.py  no_cli.py  no_pyproject.py  no_skeleton.py  no_tox.py  pre_commit.py  venv.py
src/snek/templates/: __init__.py  cli.template  contributing.template  header_interactive.template  readme.template  setup_cfg.template  setup_py.template  sphinx_conf.template  test_cli.template
tests/: conftest.py  helpers.py  test_actions.py  test_api.py  test_cli.py  test_dependencies.py  test_examples.py  test_exceptions.py  test_extensions.py  test_file_system.py  test_identification.py  test_info.py  test_init.py  test_install.py  test_log.py  test_operations.py  test_repo.py  test_shell.py  test_structure.py  test_templates.py  test_termui.py  test_toml.py  test_update.py
tests/demoapp/: runner.py  setup.cfg
tests/demoapp_data/: runner.py  setup.cfg
tests/examples/issue-506/: setup.cfg
tests/extensions/: helpers.py  incompatible_v3_api_fake_extension.py  test_cirrus.py  test_config.py  test_github_actions.py  test_gitlab_ci.py  test_interactive.py  test_namespace.py  test_no_cli.py  test_no_pyproject.py  test_no_skeleton.py  test_no_tox.py  test_pre_commit.py  test_venv.py
tests/system/: conftest.py  test_common.py  test_dependency_managers.py
