[metadata]
name = snek
description = Template tool for putting up the scaffold of a Python project
author = Teague Lasser
author_email = contact@teague.info
license = MIT
url = https://github.com/kraemahz/snek/
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
packages = find_namespace:
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
install_requires =
    importlib-metadata; python_version<"3.8"
    platformdirs>=2,<4
    configupdater>=3.0,<4  # snekext-custom-extension should have a compatible range
    setuptools>=46.1.0
    setuptools_scm>=5
    tomlkit>=0.7.0,<2
    packaging>=20.7
    colorama>=0.4.4; sys_platform == "win32"

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, like:
all =
    snekext-markdown>=0.4
    snekext-custom-extension>=0.6
    snekext-dsproject>=0.5
    snekext-django>=0.1.1
    snekext-cookiecutter>=0.1
    snekext-travis>=0.3
    virtualenv
    pre-commit
md =
    snekext-markdown>=0.4
ds =
    snekext-dsproject>=0.5
# Add here test dependencies (used by tox)
testing =
    # Used for building/installing during tests
    setuptools
    setuptools_scm[toml]
    wheel
    build
    tomlkit     # as dependency in `-e fast`
    certifi     # tries to prevent certificate problems on windows
    tox         # system tests use tox inside tox
    pre-commit  # system tests run pre-commit
    sphinx      # system tests build docs
    flake8      # system tests run flake8
    virtualenv  # virtualenv as dependency for the venv extension in `-e fast`
    pytest
    pytest-cov
    pytest-xdist
    pytest-randomly
    # We keep pytest-xdist in the test dependencies, so the developer can
    # easily opt-in for distributed tests by adding, for example, the `-n 15`
    # arguments in the command-line.

[options.entry_points]
console_scripts =
    snek = snek.cli:run
snek.cli =
    config = snek.extensions.config:Config
    interactive = snek.extensions.interactive:Interactive
    venv = snek.extensions.venv:Venv
    namespace = snek.extensions.namespace:Namespace
    no_cli = snek.extensions.no_cli:NoSkeleton
    pre_commit = snek.extensions.pre_commit:PreCommit
    no_tox = snek.extensions.no_tox:NoTox
    cirrus = snek.extensions.cirrus:Cirrus
    gitlab = snek.extensions.gitlab_ci:GitLab
    github_actions = snek.extensions.github_actions:GithubActions
    no_pyproject = snek.extensions.no_pyproject:NoPyProject

[tool:pytest]
# Options for pytest:
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junit-xml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov snek --cov-config .coveragerc --cov-report term-missing
    --verbose
#    In order to use xdist, the developer can add, for example, the following
#    arguments:
#    --numprocesses=auto
norecursedirs =
    dist
    build
    .tox
testpaths = tests
markers =
    only: for debugging purposes, a single, failing, test can be required to run
    slow: mark tests as slow (deselect with '-m "not slow"')
    system: mark system tests
    original_logger: do not isolate logger in specific tests
    no_fake_config_dir: avoid the autofixture fake_config_dir to take effect
    requires_src: tests that require the raw source of PyScaffold and assume our default CI environment
log_level = DEBUG
log_cli = True
log_cli_level = CRITICAL
junit_family = xunit2

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
# black compatibility
max_line_length = 88
# E203 and W503 have edge cases handled by black
extend_ignore = E203, W503
exclude =
    src/snek/contrib
    .tox
    build
    dist
    .eggs
    docs/conf.py

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
